bug 413091 - empty first column needs a cellspacing before as we assume always in the code to have cellspacing on the left and right side, r/sr=dbaron